--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="countdown-page__h2__sub">Secure your<strong class="gold"> DENANCE </strong>membership
           </div>
         <div class="countdown-page__btn_wrapper margin"><a href="checkout.html" target="_blank"
-            class="countdown-page__btn red buy-btn w-button">APPLY NOW</a>
+            class="countdown-page__btn red  w-button buy-btn">APPLY NOW</a>
           <div  class="countdown-page__btn__back glow red"></div>
         </div>
       </div>
