--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <p class="countdown-page__p">Denance just underwent a <strong class="countdown-page__p__bold"> massive
                 </strong> improvments in porfolio and scalp strategies.</p>
               <p class="countdown-page__p"> <strong class="countdown-page__p__bold">TO ENSURE THE QUALITY </strong> OF
-                OUR COMMUNITY AND MATHEMATICALY <strong class="countdown-page__p__bold"> FRONT&BACK TESTED
+                OUR COMMUNITY AND <strong class="countdown-page__p__bold">
                   SIGNALS</strong>,
                 WE ARE <strong class="countdown-page__p__bold">LIMITING MEMBERSHIP</strong> TO ONLY <strong
                   class="countdown-page__p__bold"> 200 PEOPLE</strong>. THAT IS A STEAL FOR <strong
