--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="countdown-nav wf-section absolute">
 
       <a href="support.html" class="nav-link w-inline-block ">
-        <div class="link invert nav-txt ">SECURE YOUR SPOT</div>
+        <div class="link invert nav-txt ">FREE</div>
       </a>
     </div>
     <div class="section-18 wf-section">
