--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
           <div class="countdown-page__container small no-margin">
             <div class="countdown-page__platform-news__bg__wrapper" >
               <div class="countdown-page__platform-news__bg"></div>
-              <h2 class="countdown-page__h2 invert"> <strong>STILL UNSURE?</strong?> </h2> 
+              <h2 class="countdown-page__h2 invert" style="margin-top: -20px;"> <strong>STILL UNSURE?</strong?> </h2> 
               <div class="countdown-page__h2__sub invert">Our <strong class="gold">results</strong> speak for
                 themselves: 
-                <div class="MagicScroll comp" style="background-color: transparent; margin-top: 20px; margin-bottom: 20px;"
-                  data-options="mode: carousel; width: 400px; height:200px; background-color: black">
+                <div class="MagicScroll comp" style="background-color: transparent; margin-top: 40px; margin-bottom: 40px;"
+                  data-options="mode: carousel; width: 700px; height:300px; background-color: black">
                   <img src="Screenshot 2022-09-15 at 01.58.40.png" />
                   <img src="11.png" />
                   <img src="Screenshot 2022-09-15 at 01.58.57.png" />
@@ -214,7 +214,7 @@
 
                 </div>
                 <div class="MagicScroll phone" style="background-color: transparent; margin-top: 20px; margin-bottom: 20px;"
-                  data-options="mode: carousel; width: 400px; height:200px; background-color: black">
+                  data-options="mode: carousel; width: 800px; height:400px; background-color: black">
                   <img src="Screenshot 2022-09-15 at 01.58.40.png" />
                   <img src="11.png" />
                   <img src="Screenshot 2022-09-15 at 01.58.57.png" />
@@ -231,9 +231,11 @@
 
 
                 </div>
+                <div style="margin-bottom: 40px;">
                 <div class="countdown-page__btn_wrapper margin" style="width: 200px; text-align: center; margin: auto"><a href="checkout.html" target="_blank"
                   class="countdown-page__btn red  w-button buy-btn">APPLY NOW</a>
                 <div class="countdown-page__btn__back glow red"></div>
+              </div>
               </div>
               
 
@@ -283,6 +285,9 @@
             </div>
           </div>
         </div>
+        <h2 class="countdown-page__h2 no-margin"><strong class="bold-text-8"> DENANCE </strong> gallery</h2> 
+        <h4 class=" no-margin"><strog class="bold-text-8"> swap right >></h4> 
+
         <div class="scroll-container">
           <div class="gridscroll">
             <!-- PLACE YOUR IMG URL HERE -->
