--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
   <link rel="stylesheet" href="theme.css">
   <script src="index.js"></script>
   <link type="text/css" rel="stylesheet" href="magicscroll/magicscroll.css" />
-  <script type="text/javascript" src="magicscroll/magicscroll.js">
+  <script type="text/javascript" src="magicscroll/magicscroll.js"></script>
+  <link href="denance_logo.png"
+  rel="shortcut icon" type="image/x-icon" />
+<link href="denance_logo.png"
+  rel="apple-touch-icon" />
 
-  </script>
-
-<link href="images/favicon.png"
-    rel="shortcut icon" type="image/x-icon" />
-  <link href="images/webclip.png"
-    rel="apple-touch-icon" />
-  <style>
 </head>
 
 
