--- a/index.html
+++ b/index.html
@@ -466,11 +466,7 @@
           <div class="section footer wf-section">
             <div class="footer-container">
               <div class="div-block-69">
-                <h3 class="heading-3">More Information</h3><a href="#" target="_blank"
-                  class="link">Terms
-                  and Conditions</a><a href="#" target="_blank" class="link">Privacy Policy</a><a
-                  href="#" target="_blank" class="link">Manage Subscription</a><a
-                  href="#" target="_blank" class="link">Contact Us</a>
+                <h3 class="heading-3">More Information</h3>
                 <br /><br />
                 <div style="color: white;">
                   Need help? Contact <a href="#"
