--- a/index.html
+++ b/index.html
@@ -469,12 +469,12 @@
                 <h3 class="heading-3">More Information</h3>
                 <br /><br />
                 <div style="color: white;">
-                  Need help? Contact <a href="#"
+                  Contact <a href="#"
                     style="color: white;"><span class="__cf_email__"
-                      data-cfemail="#">denancecrypto@gmail.com</span></a><br /><br />
+                      data-cfemail="#">denancecrypto@gmail.com</span></a>
                 </div>
               </div>
-              <div  style="color: white; opacity: .5; font-size: 2px;">
+              <div  style="color: white; opacity: .5; font-size: 8px; line-height: 8px; ;">
                 Terms & Conditions
                 Denance, this Discord/group, or any of its associates are not registered financial advisors and hold no
                 formal qualifications to give financial advice. Everything that is provided in this group is purely for
